[package]
name = "Jail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jail_ast = {path = "crates/jail_ast"}
jail_codegen = {path = "crates/jail_codegen"}
jail_error = {path = "crates/jail_error"}
jail_lex = {path = "crates/jail_lex"}
jail_parse = {path = "crates/jail_parse"}
jail_token = {path = "crates/jail_token"}

[workspace]
members = ["crates/*"]
