[package]
name = "jail_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jail_token = {path = "../jail_token"}
jail_error = {path = "../jail_error"}
jail_lex = {path = "../jail_lex"}
jail_ast = {path = "../jail_ast"}
ansi_term = "0.12"